2024-01-11T08:09:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7485914034 # 13
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
* notice: last 14d: unq all: 2 9
* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 308 651
* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 309 652
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-11]

2024-01-11T00:32:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7482534109 # 12
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 301 639 / 308 651
* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 308 651
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-27] / []

2024-01-10T16:08:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7477637020 # 11
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 301 639 / 307 649
* notice: next accum: outdated-unq outdated-all / unq all: 301 639 / 308 651
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-01-10]

2024-01-10T08:08:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7471985549 # 10