@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-11T08:09:21Z",
+  "timestamp" : "2024-01-12T00:32:13Z",
   "count_outdated" : 643,
   "uniques_outdated" : 303,
-  "count" : 652,
+  "count" : 653,
   "uniques" : 309,
   "clones" : [
     {
@@ -43,9 +43,9 @@
     },
     {
       "timestamp": "2024-01-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
