@@ -1,3 +1,12 @@
+2024-01-12T00:32:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7496260276 # 15
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
+* notice: last 14d: unq all: 2 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 309 652
+* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 309 653
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-01-11]
+
 2024-01-11T08:09:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7485914034 # 13
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
